[gd_scene load_steps=4 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://addons/pocket_ad/font/SC-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 154.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "预加载插屏广告"

[node name="Button3" type="Button" parent="."]
margin_top = 111.0
margin_right = 154.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "预加载全屏广告"

[node name="Button5" type="Button" parent="."]
margin_top = 219.0
margin_right = 154.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
text = "预加载激励屏广告"

[node name="Button2" type="Button" parent="."]
margin_left = 162.0
margin_right = 316.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "展示插屏广告"

[node name="Button4" type="Button" parent="."]
margin_left = 162.0
margin_top = 111.0
margin_right = 316.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 1 )
text = "展示全屏广告"

[node name="Button6" type="Button" parent="."]
margin_left = 162.0
margin_top = 219.0
margin_right = 316.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
text = "展示激励广告"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
